...
    }

}

#Preview {
    NavigationStack {
        PlayerView(channel: Channel.defaults[0])
            .environmentObject(PlayerViewModel(
                db: try! DatabaseService(path: ":memory:"),
                archiveService: InternetArchiveService(),
                fmaService: FMAService(),
                queueManager: QueueManager(db: try! DatabaseService(path: ":memory:")),
                audioPlayer: AudioPlayerService(),
...
